Handle ctrl-c and other termination signals

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 bytes = "1.*"
 clap = { version = "4.*", features = ["derive", "wrap_help"] }
+ctrlc = { version = "3.*", features = ["termination"] }
 image = { version = "0.24.*", default-features = false, features = ["jpeg"] }
 lazy_static = "1.*"
 regex = "1.*"
