--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "syno-photo-frame"
-version = "0.8.0"
+version = "0.9.0"
 edition = "2021"
 description = "Full-screen slideshow for Synology Photos albums"
 license = "GPL-3.0-or-later"
@@ -32,8 +32,9 @@ log = "0.4.*"
 rand = "0.8.*"
 regex = "1.*"
 reqwest = { version = "0.11.*", features = ["blocking", "cookies", "json"] }
-sdl2 = "0.*"
+sdl2 = { version = "0.*", features = ["ttf"] }
 serde = { version = "1.*", features = ["derive"] }
+serde_json = "1.*"
 simple_logger = "4.*"
 
 [dev-dependencies]
