--- a/dpkg/Makefile
+++ b/dpkg/Makefile
@@ -11,17 +11,23 @@ all:
 	@sed -i 's/^version = "\(..*\)"/version = "$(VERSION)"/' ../Cargo.toml
 	@cargo build --release
 # Create package build dir hierarchy
-	@mkdir -p $(dpkg_name)/bin
-	@mkdir -p $(dpkg_name)/DEBIAN
+	@mkdir -m 0755 $(dpkg_name)
+	@mkdir -m 0755 $(dpkg_name)/bin
+	@mkdir -m 0755 $(dpkg_name)/usr
+	@mkdir -m 0755 $(dpkg_name)/usr/share
+	@mkdir -m 0755 $(dpkg_name)/usr/share/doc
+	@mkdir -m 0755 $(dpkg_name)/usr/share/doc/$(name)
+	@mkdir $(dpkg_name)/DEBIAN
 	@cp control $(dpkg_name)/DEBIAN/
-	@mkdir -p $(dpkg_name)/usr/share/doc/$(name)
-	@cp copyright $(dpkg_name)/usr/share/doc/$(name)
+	@cp -p copyright $(dpkg_name)/usr/share/doc/$(name)
 # Set version and architecture in package control file
 	@sed -i 's/^Version: 0.0.0/Version: $(VERSION)/' $(dpkg_name)/DEBIAN/control
 	@sed -i 's/^Architecture:/Architecture: $(arch)/' $(dpkg_name)/DEBIAN/control
 # Trim the binary
 	@objcopy --strip-debug --strip-unneeded ../target/release/$(name) $(dpkg_name)/bin/$(name)
+	@chmod 0755 $(dpkg_name)/bin/$(name)
 	@gzip -c --best -k -n changelog > $(dpkg_name)/usr/share/doc/$(name)/changelog.gz
+	@chmod 0644 $(dpkg_name)/usr/share/doc/$(name)/changelog.gz
 	@dpkg-deb --root-owner-group --build $(dpkg_name)
 # `lintian` needs to be installed for this to work
 	@lintian $(dpkg_name).deb
