--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "syno-photo-frame"
-version = "0.11.0"
+version = "0.12.0"
 edition = "2021"
 description = "Full-screen slideshow for Synology Photos albums"
 license = "GPL-3.0-or-later"
@@ -29,12 +29,12 @@ exclude = [
 bytes = "1.*"
 clap = { version = "4.*", features = ["derive", "wrap_help"] }
 ctrlc = { version = "3.*", features = ["termination"] }
-image = { version = "0.24.*", default-features = false, features = ["jpeg"] }
+image = { version = "0.24.*", default-features = false, features = ["jpeg", "png"] }
 log = "0.4.*"
 rand = "0.8.*"
 regex = "1.*"
 reqwest = { version = "0.11.*", features = ["blocking", "cookies", "json"] }
-sdl2 = { version = "0.*", features = ["ttf"] }
+sdl2 = "0.36.*"
 serde = { version = "1.*", features = ["derive"] }
 serde_json = "1.*"
 simple_logger = "4.*"
