--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,10 +28,10 @@ exclude = [
 [dependencies]
 bytes = "1.*"
 clap = { version = "4.*", features = ["derive", "wrap_help"] }
+ftp = "3.0.1"
 image = { version = "0.25.*", default-features = false, features = ["jpeg", "png"] }
 log = "0.4.*"
 rand = "0.8.*"
-regex = "1.*"
 reqwest = { version = "0.12.*", features = ["blocking", "cookies", "json"] }
 sdl2 = "0.36.*"
 serde = { version = "1.*", features = ["derive"] }
