--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ bytes = "1.*"
 clap = { version = "4.*", features = ["derive", "wrap_help"] }
 ftp = "3.0.1"
 image = { version = "0.25.*", default-features = false, features = ["jpeg", "png"] }
+lazy-regex = "3.1.0"
 log = "0.4.*"
 rand = "0.8.*"
 reqwest = { version = "0.12.*", features = ["blocking", "cookies", "json"] }
