--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ exclude = [
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.*"
 bytes = "1.*"
 clap = { version = "4.*", features = ["derive", "wrap_help"] }
 image = { version = "0.25.*", default-features = false, features = ["jpeg", "png"] }
@@ -37,6 +38,7 @@ sdl2 = "0.37.*"
 serde = { version = "1.*", features = ["derive"] }
 serde_json = "1.*"
 simple_logger = "5.*"
+syno_api = "0.3"
 
 [dev-dependencies]
 mock_instant = "0.3.*"
