--- a/dpkg/control
+++ b/dpkg/control
@@ -4,7 +4,7 @@ Section: utils
 Priority: optional
 Architecture:
 Maintainer: Piotr Karasinski <7767011+Caleb9@users.noreply.github.com>
-Description: Full-screen slideshow for Synology Photos albums
+Description: Full-screen slideshow for Synology Photos and Immich albums
  .
 Depends: libc6 (>= 2.31), libegl1 (>= 1.3.2), libgl1 (>= 1.3.2), libsdl2-2.0-0 (>= 2.0.26), libssl3 | libssl1.1
 Homepage: https://github.com/Caleb9/syno-photo-frame
