--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,20 @@
 [package]
-name = "syno-photo-frame"
-version = "0.12.1"
+name = "ftp-photo-frame"
+version = "0.1.0"
 edition = "2021"
-description = "Full-screen slideshow for Synology Photos albums"
+description = "Full-screen slideshow for FTP-accessible Photos"
 license = "GPL-3.0-or-later"
-authors = ["Piotr Karasinski"]
+authors = ["Finn Jannsen"]
 readme = "README.md"
-repository = "https://github.com/caleb9/syno-photo-frame"
+repository = "https://github.com/Finnfj/ftp-photo-frame"
 keywords = [
-    "synology",
-    "synology-photos",
+    "ftp",
+    "ftp-photos",
     "digital-photo-frame",
     "slideshow",
     "raspberry-pi",
 ]
-rust-version = "1.74"
+rust-version = "1.84.1"
 exclude = [
     ".*",
     "doc/",
