--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,6 +15,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up Docker environment
+      shell: bash
       run: |
         rm /bin/sh && ln -s /bin/bash /bin/sh
         mkdir /build
@@ -29,3 +30,9 @@ jobs:
 
     - name: Run Cargo build
       run: cargo build --release
+    
+    - name: Upload build artifact
+      with:
+        name: ftp-photo-frame binary
+        path: target\aarch64-unknown-linux-gnu\debug\ftp-photo-frame
+        retention-days: 5
