--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -32,6 +32,7 @@ jobs:
       run: cargo build --release
     
     - name: Upload build artifact
+      uses: actions/upload-artifact@v4
       with:
         name: ftp-photo-frame binary
         path: target\aarch64-unknown-linux-gnu\debug\ftp-photo-frame
