--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -32,11 +32,11 @@ jobs:
       shell: bash
       run: |
         source $HOME/.cargo/env
-        cargo build --release
+        cargo build --target=aarch64-unknown-linux-gnu
     
     - name: Upload build artifact
       uses: actions/upload-artifact@v4
       with:
         name: ftp-photo-frame binary
-        path: target\aarch64-unknown-linux-gnu\debug\ftp-photo-frame
+        path: target/aarch64-unknown-linux-gnu/debug/ftp-photo-frame
         retention-days: 5
