--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ log = "0.4.*"
 rand = "0.9.*"
 regex = "1.*"
 reqwest = { version = "0.12.*", features = ["blocking", "cookies", "json"] }
-sdl2 = "0.38.*"
+sdl3 = {  version = "0.16.*", features = ["build-from-source-static"] }
 serde = { version = "1.*", features = ["derive"] }
 serde_json = "1.*"
 simple_logger = "5.*"
