--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "syno-photo-frame"
-version = "0.14.4"
+version = "0.15.0"
 edition = "2024"
 description = "Full-screen slideshow for Synology Photos and Immich albums"
 license = "GPL-3.0-or-later"
@@ -29,16 +29,17 @@ exclude = [
 anyhow = "1.*"
 bytes = "1.*"
 clap = { version = "4.*", features = ["derive", "wrap_help"] }
+chrono = { version = "0.4.*", features = ["serde", "unstable-locales"] }
 image = { version = "0.25.*", default-features = false, features = ["jpeg", "png"] }
 log = "0.4.*"
 rand = "0.9.*"
 regex = "1.*"
 reqwest = { version = "0.12.*", features = ["blocking", "cookies", "json"] }
-sdl2 = "0.38.*"
+sdl2 = { version = "0.38.*", features = ["gfx", "ttf"] }
 serde = { version = "1.*", features = ["derive"] }
 serde_json = "1.*"
 simple_logger = "5.*"
-syno_api = "0.5"
+syno_api = "0.6"
 
 [dev-dependencies]
 mock_instant = "0.3.*"
