--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "syno-photo-frame"
-version = "0.15.1"
+version = "0.15.2-main"
 edition = "2024"
 description = "Full-screen slideshow for Synology Photos and Immich albums"
 license = "GPL-3.0-or-later"
@@ -32,9 +32,9 @@ clap = { version = "4.*", features = ["derive", "wrap_help"] }
 chrono = { version = "0.4.*", features = ["serde", "unstable-locales"] }
 image = { version = "0.25.*", default-features = false, features = ["jpeg", "png"] }
 log = "0.4.*"
-rand = "0.9.*"
+rand = "0.10.*"
 regex = "1.*"
-reqwest = { version = "0.12.*", features = ["blocking", "cookies", "json"] }
+reqwest = { version = "0.13.*", features = ["blocking", "cookies", "json", "form", "query"] }
 sdl2 = { version = "0.38.*", features = ["gfx", "ttf"] }
 serde = { version = "1.*", features = ["derive"] }
 serde_json = "1.*"
@@ -42,5 +42,5 @@ simple_logger = "5.*"
 syno_api = "0.6"
 
 [dev-dependencies]
-mock_instant = "0.3.*"
-mockall = "0.13.*"
+mock_instant = "0.6.*"
+mockall = "0.14.*"
